rnsc/test_data/integration/error/parser/type_hints/utf8/no_operand.rns
.class   @utf8 ; no operand provided
.super java/lang/Object